<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="vm" type="poc.com.reminderapp.viewmodel.CreateReminderViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/medium_margin"
            tools:context=".fragments.CreateReminderFragment">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/ReminderTitleEditText"
                android:layout_width="match_parent"
                android:minHeight="60dp"
                android:hint="@string/remind_me_to"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/large_margin"
                android:orientation="horizontal">
            <android.support.v7.widget.AppCompatTextView
                    android:text="@string/date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            <android.support.v7.widget.AppCompatTextView
                    android:text="@string/time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/dateFieldTextView"
                    android:text="@string/date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/timeFieldTextView"
                    android:text="@string/time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/NotesEditText"
                android:layout_width="match_parent"
                android:minHeight="100dp"
                android:hint="@string/notes"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/saveReminder"
                android:layout_width="wrap_content"
                android:text="@string/save"
                android:padding="@dimen/large_margin"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>