<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="vm" type="poc.com.reminderapp.viewmodel.HomeViewModel"/>

        <import type="android.view.View" />
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".fragments.HomeFragment">

        <LinearLayout
                android:id="@+id/search_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/medium_margin"
                android:background="@drawable/search_box_bg"
                android:orientation="horizontal"
                android:transitionName="@string/search_transition">

            <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/search_editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onTextChanged="@{vm.onTextChanged}"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/search_hint"
                    android:maxLines="1"
                    android:padding="@dimen/small_margin"
                    android:textSize="14sp"/>

            <android.support.v7.widget.AppCompatImageButton
                    enable="@{vm.enableSearchButton}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_button_bg_selector"
                    android:padding="@dimen/medium_margin"
                    android:onClick="@{()->vm.search()}"
                    android:src="@android:drawable/ic_menu_search"/>
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
                android:id="@+id/reminderList"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
                android:id="@+id/listViewNoResultsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_layout"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/empty_reminder_list"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="@{vm.noResults?View.VISIBLE:View.GONE}" />

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="@{vm.showLoading?View.VISIBLE:View.GONE}" />

    </LinearLayout>


</layout>